--- a/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
+++ b/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
@@ -1,19 +1,10 @@
 # How to Test Various Browsers & Viewports
 
-Ready for Review: Yes
-Reviewed By: Kevin
-Reviewed By Kevin: September 13, 2021
-Section: Advanced Cypress Concepts
-Status: Migrated
-Title Approved: Yes
-
----
-
 ## Different Browsers
 
 Running all of your tests within [multiple browsers](https://docs.cypress.io/guides/guides/cross-browser-testing) and across various screen sizes is incredibly important. Currently, Cypress supports [Chrome-family browsers](https://docs.cypress.io/guides/guides/launching-browsers#Chrome-Browsers) (including Electron and Chromium-based Microsoft Edge) and Firefox.
 
-You can also configure Cypress to run your tests within a specific window size with custom configurations. A great example of how to do this is in the [Real World App (RWA)](https://github.com/cypress-io/cypress-realworld-app). If you look at the [GitHub Actions workflow](https://github.com/cypress-io/cypress-realworld-app/blob/develop/.github/workflows/main.yml), we will run the tests within the RWA in Chrome Desktop, Chrome Mobile, Firefox Desktop, and Firefox Mobile. 
+You can also configure Cypress to run your tests within a specific window size with custom configurations. A great example of how to do this is in the [Real World App (RWA)](https://github.com/cypress-io/cypress-realworld-app). If you look at the [GitHub Actions workflow](https://github.com/cypress-io/cypress-realworld-app/blob/develop/.github/workflows/main.yml), we will run the tests within the RWA in Chrome Desktop, Chrome Mobile, Firefox Desktop, and Firefox Mobile.
 
 We can tell Cypress to use a specific browser by specifying the browser we want with the browser key like so:
 
@@ -21,7 +12,7 @@ We can tell Cypress to use a specific browser by specifying the browser we want 
 browser: Firefox
 ```
 
-This works excellent in CI, but what if you want to do this locally? 
+This works excellent in CI, but what if you want to do this locally?
 
 You can pass in which browser you would like Cypress to run in via the command line like so:
 
@@ -31,7 +22,7 @@ cypress run --browser Firefox
 
 You can also select which browser to run via the UI by selecting it in the dropdown like so:
 
-![Screen Shot 2021-08-31 at 9.16.07 AM.png](How%20to%20Test%20Various%20Browsers%20&%20Viewports%2061c3e91e551747a1a9cf1401ded5db7d/Screen_Shot_2021-08-31_at_9.16.07_AM.png)
+![](/images/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports/Screen_Shot_2021-08-31_at_9.16.07_AM.png)
 
 You can even do this on a test by test basis by passing an [options object to your tests](https://docs.cypress.io/guides/guides/cross-browser-testing#Running-Specific-Tests-by-Browser).
 
@@ -74,21 +65,24 @@ All of the tests within the RWA are written for Desktop by default. Within the `
 "cypress:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
 ```
 
-As you can see, when these commands are executed, we are passing along some custom configuration that tells Cypress the `viewportWidth` and `viewportHeight` to use when launching our tests. 
+As you can see, when these commands are executed, we are passing along some custom configuration that tells Cypress the `viewportWidth` and `viewportHeight` to use when launching our tests.
 
 We also have a utility function called `isMobile()` which determines if our tests are being run at the mobile viewport. Here is what that function looks like:
 
 ```jsx
 export const isMobile = () => {
-	return Cypress.config("viewportWidth") < Cypress.env("mobileViewportWidthBreakpoint");
-};
+  return (
+    Cypress.config("viewportWidth") <
+    Cypress.env("mobileViewportWidthBreakpoint")
+  )
+}
 ```
 
-The environment variable `mobileViewportWidthBreakpoint` is located within the `cypress.json` config file. 
+The environment variable `mobileViewportWidthBreakpoint` is located within the `cypress.json` config file.
 
 ```json
 {
-	// ...
+  // ...
 
   "env": {
     "apiUrl": "http://localhost:3001",
@@ -102,25 +96,25 @@ The environment variable `mobileViewportWidthBreakpoint` is located within the `
 }
 ```
 
-In our tests, we can use this function to determine if the tests are being executed within our mobile viewport and react accordingly using a conditional. 
+In our tests, we can use this function to determine if the tests are being executed within our mobile viewport and react accordingly using a conditional.
 
 ```jsx
 it("should remember a user for 30 days after login", function () {
-    cy.database("find", "users").then((user: User) => {
-      cy.login(user.username, "s3cret", { rememberUser: true });
-    });
+  cy.database("find", "users").then((user: User) => {
+    cy.login(user.username, "s3cret", { rememberUser: true })
+  })
 
-    // Verify Session Cookie
-    cy.getCookie("connect.sid").should("have.property", "expiry");
+  // Verify Session Cookie
+  cy.getCookie("connect.sid").should("have.property", "expiry")
 
-    // Logout User
-    if (isMobile()) {
-      cy.getBySel("sidenav-toggle").click();
-    }
-    cy.getBySel("sidenav-signout").click();
-    cy.location("pathname").should("eq", "/signin");
-    cy.visualSnapshot("Redirect to SignIn");
-  });
+  // Logout User
+  if (isMobile()) {
+    cy.getBySel("sidenav-toggle").click()
+  }
+  cy.getBySel("sidenav-signout").click()
+  cy.location("pathname").should("eq", "/signin")
+  cy.visualSnapshot("Redirect to SignIn")
+})
 ```
 
 In the case of the RWA, the sidebar is hidden by default on mobile. This function will fire whenever our viewport width is less than `414px`.
@@ -132,15 +126,3 @@ For more info, check out these articles within our docs.
 [Test Configuration](https://docs.cypress.io/guides/references/configuration#Test-Configuration)
 
 [Cross Browser Testing](https://docs.cypress.io/guides/guides/cross-browser-testing)
-
-## Quiz
-
-Which browser can Cypress test?
-
-answer: all of the above
-
-other:
-
-- Chrome
-- Firefox
-- Microsoft Edge
