--- a/content/courses/advanced-cypress-concepts/integration-and-api-tests.mdx
+++ b/content/courses/advanced-cypress-concepts/integration-and-api-tests.mdx
@@ -7,7 +7,7 @@ Section: Advanced Cypress Concepts
 Status: Migrated
 Title Approved: Yes
 
-Cypress provides a great developer experience for testing APIs. We used Cypress extensively to test the various APIs within the [Real World App (RWA)](https://github.com/cypress-io/cypress-realworld-app). Before we built the UI, we wrote various [API and integration tests](https://github.com/cypress-io/cypress-realworld-app/tree/develop/cypress/tests/api) with Cypress to ensure the application APIs were working as expected. 
+Cypress provides a great developer experience for testing APIs. We used Cypress extensively to test the various APIs within the [Real World App (RWA)](https://github.com/cypress-io/cypress-realworld-app). Before we built the UI, we wrote various [API and integration tests](https://github.com/cypress-io/cypress-realworld-app/tree/develop/cypress/tests/api) with Cypress to ensure the application APIs were working as expected.
 
 ## Example API Test
 
@@ -17,29 +17,23 @@ Let's look at one of the API tests from the RWA to understand better how to test
 // cypress/tests/api/api-users.spec.ts
 
 context("GET /users", function () {
-    it("gets a list of users", function () {
-      cy.request("GET", apiUsers).then((response) => {
-        expect(response.status).to.eq(200);
-        expect(response.body.results).length.to.be.greaterThan(1);
-      });
-    });
-  });
+  it("gets a list of users", function () {
+    cy.request("GET", apiUsers).then((response) => {
+      expect(response.status).to.eq(200)
+      expect(response.body.results).length.to.be.greaterThan(1)
+    })
+  })
+})
 ```
 
-In this simple test, we make a `GET` request to our `/users` route using `cy.request()`. We assert that the response returns a `200` status code and that more than one user is returned from the response. 
+In this simple test, we make a `GET` request to our `/users` route using `cy.request()`. We assert that the response returns a `200` status code and that more than one user is returned from the response.
 
 ## Developer Experience
 
-One of the pleasant aspects of using Cypress for testing APIs is that you can easily see and interact with the response data from within the Test Runner UI. 
+One of the pleasant aspects of using Cypress for testing APIs is that you can easily see and interact with the response data from within the Test Runner UI.
 
 Clicking upon the request step in the Cypress Command Log, we can see all of the response data in the browser's console.
 
-![Screen Shot 2021-09-01 at 9.20.04 AM.png](Integration%20&%20API%20Tests%20ed16ebcca9224bbbb28aeea6b5f42acf/Screen_Shot_2021-09-01_at_9.20.04_AM.png)
+![](/images/advanced-cypress-concepts/integration-and-api-tests/Screen_Shot_2021-09-01_at_9.20.04_AM.png)
 
 This allows you to quickly inspect and debug the data coming back from your APIs against the actual data returned in the original requests.
-
-## Quiz
-
-Cypress provides a great developer experience for testing API's
-
-answer: true
