--- a/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
+++ b/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
@@ -1,21 +1,22 @@
 # Running Cypress in CI
 
-Ready for Review: Yes
-Reviewed By: Jordan, Kevin
-Reviewed By Kevin: September 13, 2021
-Section: Advanced Cypress Concepts
-Status: Migrated
-Title Approved: Yes
-
-One of Cypress's most essential and powerful use cases is having it run in your CI/CD pipeline. This way, every time you make a change to your codebase, your CI Pipeline will automatically run all of your Cypress tests to ensure that nothing has broken in your application. We have extensive documentation on using Cypress in CI and how to integrate it with various CI providers. 
+One of Cypress's most essential and powerful use cases is having it run in your CI/CD pipeline. This way, every time you make a change to your codebase, your CI Pipeline will automatically run all of your Cypress tests to ensure that nothing has broken in your application. We have extensive documentation on using Cypress in CI and how to integrate it with various CI providers.
 
 ### What is Continuous Integration(CI)
 
-[https://www.youtube.com/watch?v=USX6AntcPyg](https://www.youtube.com/watch?v=USX6AntcPyg)
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/USX6AntcPyg"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 ### Introduction to Continuous Integration
 
-We have an extensive guide covering everything you need to know about using Cypress in CI. You can find that guide [here](https://docs.cypress.io/guides/continuous-integration/introduction). 
+We have an extensive guide covering everything you need to know about using Cypress in CI. You can find that guide [here](https://docs.cypress.io/guides/continuous-integration/introduction).
 
 ### Integrating Cypress with various CI Providers
 
@@ -30,9 +31,3 @@ In our docs, we have several [examples](https://docs.cypress.io/guides/continuou
 ### Cypress Dashboard
 
 The [Cypress Dashboard](https://www.cypress.io/dashboard/) increases test velocity while giving total visibility into tests running in your CI pipeline. It also provides automatic parallelization and load balancing, so your tests run incredibly fast.
-
-## Quiz
-
-The Cypress dashboard provides automatic parallelization and load balancing for your tests.
-
-answer: true
