--- a/content/courses/advanced-cypress-concepts/using-data-to-build-dynamic-tests.mdx
+++ b/content/courses/advanced-cypress-concepts/using-data-to-build-dynamic-tests.mdx
@@ -1,13 +1,6 @@
 # Using Data to Build Dynamic Tests
 
-Ready for Review: No
-Reviewed By: Kevin
-Reviewed By Kevin: September 23, 2021
-Section: Advanced Cypress Concepts
-Status: Migrated
-Title Approved: Yes
-
-In the lesson [Database Initialization & Seeding](Database%20Initialization%20&%20Seeding%2012d7ce44bc424a3688a7839a7c7cef79.md), we give you several strategies for creating the data necessary for your tests. In this lesson, we will help you better understand how to use that data to drive your tests.
+In the lesson [Database Initialization & Seeding](/advanced-cypress-concepts/database-initialization-and-seeding), we give you several strategies for creating the data necessary for your tests. In this lesson, we will help you better understand how to use that data to drive your tests.
 
 ## What are Data-Driven Tests?
 
@@ -16,8 +9,8 @@ When we speak of "Data-Driven Tests," we refer to using variables, fixtures, or 
 For example, let's say you have a test which tests the login form in your app. You could hard code the data, like so:
 
 ```jsx
-cy.get("username").type("jdoe");
-cy.get("password").type("password123");
+cy.get("username").type("jdoe")
+cy.get("password").type("password123")
 ```
 
 Or you could use data from variables.
@@ -26,60 +19,54 @@ Or you could use data from variables.
 const users = [
   {
     username: "John",
-    password: "password123"
+    password: "password123",
   },
   {
     username: "Jane",
-    password: "password123"
+    password: "password123",
   },
-];
+]
 
-cy.get("username").type(users[0].username);
-cy.get("password").type(users[0].password);
+cy.get("username").type(users[0].username)
+cy.get("password").type(users[0].password)
 ```
 
 You could also use data from a [fixture](https://docs.cypress.io/api/commands/fixture).
 
 ```jsx
-cy.fixture("users.json").as("usersData");
+cy.fixture("users.json").as("usersData")
 
-cy.get("username").type(usersData[0].username);
-cy.get("password").type(usersData[0].password);
+cy.get("username").type(usersData[0].username)
+cy.get("password").type(usersData[0].password)
 ```
 
-Or, you could use an actual user from your database. 
+Or, you could use an actual user from your database.
 
 ## Using data from remote systems (API, database, etc.) to drive seed data and tests
 
 ```jsx
 describe("Notifications", function () {
-  const ctx = {};
+  const ctx = {}
 
   beforeEach(function () {
     // ...
 
     cy.database("filter", "users").then((users) => {
-      ctx.userA = users[0];
-      ctx.userB = users[1];
-      ctx.userC = users[2];
-    });
-  });
-  
+      ctx.userA = users[0]
+      ctx.userB = users[1]
+      ctx.userC = users[2]
+    })
+  })
+
   it("allows users to login", () => {
-    cy.get("username").type(ctx.userA.userName);
-    cy.get("password").type(ctx.userA.password);
+    cy.get("username").type(ctx.userA.userName)
+    cy.get("password").type(ctx.userA.password)
   })
 })
 ```
 
-In this example, `cy.database()` is a custom Cypress command which performs operations on our database depending upon which arguments are passed into it. You can learn how this command works [here](cy%20database()%2024eee289efbe4378bf83d1b050366049.md). 
+In this example, `cy.database()` is a custom Cypress command which performs operations on our database depending upon which arguments are passed into it. You can learn how this command works [here](<cy%20database()%2024eee289efbe4378bf83d1b050366049.md>).
 
 ## Benefits of Data-Driven Tests
 
-Using actual data has several benefits. First, you are using existing data from your application. This more closely mimics how real users interact with your app. Hard-coded data can be challenging to maintain over time, as it requires consistent updating and maintenance. Instead of hard-coded data, the only thing you have to maintain is the data itself. 
-
-## Quiz
-
-It is best to use hard-coded data for your tests.
-
-answer: false
+Using actual data has several benefits. First, you are using existing data from your application. This more closely mimics how real users interact with your app. Hard-coded data can be challenging to maintain over time, as it requires consistent updating and maintenance. Instead of hard-coded data, the only thing you have to maintain is the data itself.
