--- a/content/real-world-examples/bank-accounts/creating-a-new-bank-account.mdx
+++ b/content/real-world-examples/bank-accounts/creating-a-new-bank-account.mdx
@@ -1,10 +1,96 @@
----
-title: Creating a New Bank Account
----
 # Creating a New Bank Account
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Diataxis Type: How-To Guide
+Ready for Review: Yes
+Section: Bank Accounts, Real World Examples
+Status: Migrated
+Title Approved: No
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Before continuing, make sure you have read the [Bank Accounts Overview & Setup](Bank%20Accounts%20Overview%20&%20Setup%20c40a9fd9fa964f47a726d51989ad5a90.md) lesson first.
+
+```bash
+it("creates a new bank account", function () {
+    cy.wait("@getNotifications");
+    if (isMobile()) {
+      cy.getBySel("sidenav-toggle").click();
+    }
+
+    cy.getBySel("sidenav-bankaccounts").click();
+
+    cy.getBySel("bankaccount-new").click();
+    cy.location("pathname").should("eq", "/bankaccounts/new");
+    cy.visualSnapshot("Display New Bank Account Form");
+
+    cy.getBySelLike("bankName-input").type("The Best Bank");
+    cy.getBySelLike("routingNumber-input").type("987654321");
+    cy.getBySelLike("accountNumber-input").type("123456789");
+    cy.visualSnapshot("Fill out New Bank Account Form");
+    cy.getBySelLike("submit").click();
+
+    cy.wait("@gqlCreateBankAccountMutation");
+
+    cy.getBySelLike("bankaccount-list-item")
+      .should("have.length", 2)
+      .eq(1)
+      .should("contain", "The Best Bank");
+    cy.visualSnapshot("Bank Account Created");
+  });
+```
+
+You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+
+First, we wait upon our aliased intercept `@getNotifications`
+
+```bash
+cy.wait("@getNotifications");
+```
+
+Next, we click on the "Bank Accounts" link in the left sidebar, depending upon if we are a mobile device or not. You can find out more info about the `isMobile()` utility function [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+
+```jsx
+if (isMobile()) {
+      cy.getBySel("sidenav-toggle").click();
+    }
+
+    cy.getBySel("sidenav-bankaccounts").click();
+```
+
+![Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.19.19_AM.png](Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.19.19_AM.png)
+
+Next, we will click on the "Create" button and write an assertion that the application has taken us to the correct screen by validating the URL.
+
+```jsx
+cy.getBySel("bankaccount-new").click();
+cy.location("pathname").should("eq", "/bankaccounts/new");
+```
+
+![Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.21.15_AM.png](Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.21.15_AM.png)
+
+Then, we fill out the new bank account form with our bank account information and save it.
+
+```jsx
+// Create Bank Account Form
+    cy.getBySelLike("bankName-input").type("The Best Bank");
+    cy.getBySelLike("routingNumber-input").type("987654321");
+    cy.getBySelLike("accountNumber-input").type("123456789");
+    cy.getBySelLike("submit").click();
+```
+
+![Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.22.29_AM.png](Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.22.29_AM.png)
+
+We then wait for our GraphQL mutation to create a new bank account.
+
+```jsx
+cy.wait("@gqlCreateBankAccountMutation");
+```
+
+Finally, we will write an assertion that ensures that our new bank account is created successfully.
+
+```jsx
+cy.getBySelLike("bankaccount-list-item")
+      .should("have.length", 2)
+      .eq(1)
+      .should("contain", "The Best Bank");
+```
+
+![Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.25.36_AM.png](Creating%20a%20New%20Bank%20Account%20eda1d9d2f93e47c1b698aa9b27a73ab4/Screen_Shot_2021-06-30_at_10.25.36_AM.png)
