--- a/content/real-world-examples/bank-accounts/users-without-bank-accounts.mdx
+++ b/content/real-world-examples/bank-accounts/users-without-bank-accounts.mdx
@@ -1,10 +1,88 @@
----
-title: Users Without Bank Accounts
----
-# Users Without Bank Accounts
+# Users without Bank Accounts
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Diataxis Type: How-To Guide
+Ready for Review: Yes
+Section: Bank Accounts, Real World Examples
+Status: Migrated
+Title Approved: No
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Before continuing, make sure you have read the [Bank Accounts Overview & Setup](Bank%20Accounts%20Overview%20&%20Setup%20c40a9fd9fa964f47a726d51989ad5a90.md) lesson first.
+
+```bash
+it("renders an empty bank account list state with onboarding modal", function () {
+    cy.wait("@getNotifications");
+    cy.intercept("POST", apiGraphQL, (req) => {
+      const { body } = req;
+      if (body.hasOwnProperty("operationName") && body.operationName === "ListBankAccount") {
+        req.alias = "gqlListBankAccountQuery";
+        req.continue((res) => {
+          res.body.data.listBankAccount = [];
+        });
+      }
+    });
+
+    cy.visit("/bankaccounts");
+    cy.wait("@getNotifications");
+    cy.wait("@gqlListBankAccountQuery");
+
+    cy.getBySel("bankaccount-list").should("not.exist");
+    cy.getBySel("empty-list-header").should("contain", "No Bank Accounts");
+    cy.getBySel("user-onboarding-dialog").should("be.visible");
+    cy.getBySel("nav-top-notifications-count").should("exist");
+    cy.visualSnapshot("User Onboarding Dialog is Visible");
+  });
+```
+
+You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+
+First, we wait upon our aliased intercept `@getNotifications`
+
+```bash
+cy.wait("@getNotifications");
+```
+
+Next, we use `cy.intercept` to intercept the `POST` request to our GraphQL endpoint. We then determine if the `POST` request is a GraphQL query to "ListBankAccount." If so, we set the alias to `gqlListBankAccountQuery`. 
+
+Then we clear out any `listBankAccount` items that come back by setting this property on the response to an empty array. This is how we manipulate the response data to ensure we "render an empty bank account list," which is necessary for our test.
+
+```jsx
+cy.intercept("POST", `${Cypress.env("apiUrl")}/graphql`, (req) => {
+      const { body } = req;
+      if (body.hasOwnProperty("operationName") && body.operationName === "ListBankAccount") {
+        req.alias = "gqlListBankAccountQuery";
+        req.continue((res) => {
+          res.body.data.listBankAccount = [];
+        });
+      }
+    });
+```
+
+We then `.visit()` the `/bankaccounts` route.
+
+```bash
+cy.visit("/bankaccounts");
+```
+
+Then we wait on two intercepts—one for `@getNotifications` and the other for `@gqlListBankAccountQuery`. Remember the `@getNotifications` intercept happens in the `beforeEach()` hook.
+
+```bash
+cy.wait("@getNotifications");
+cy.wait("@gqlListBankAccountQuery");
+```
+
+Finally, we write some assertions to make sure our UI is displaying the elements that it should. We first want to ensure that the element that would normally display our bank accounts does not exist in the `DOM`.
+
+Then, we make sure we are displaying the correct message since there are no bank accounts.
+
+Next, we assert that the onboarding modal window is visible.
+
+Finally, we assert that the user's notification count is visible.
+
+```jsx
+cy.getBySel("bankaccount-list").should("not.exist");
+    cy.getBySel("empty-list-header").should("contain", "No Bank Accounts");
+    cy.getBySel("user-onboarding-dialog").should("be.visible");
+    cy.getBySel("nav-top-notifications-count").should("exist");
+```
+
+![Users%20without%20Bank%20Accounts%20ef83fa2841d241efbfda7aa1b2bf4b6c/Screen_Shot_2021-06-30_at_1.17.05_PM.png](Users%20without%20Bank%20Accounts%20ef83fa2841d241efbfda7aa1b2bf4b6c/Screen_Shot_2021-06-30_at_1.17.05_PM.png)
