--- a/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
+++ b/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
@@ -1,10 +1,194 @@
----
-title: Submitting a Payment to Another User
----
-# Submitting a Payment to Another User
+# Submitting a payment to another user
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Diataxis Type: How-To Guide
+Ready for Review: Yes
+Section: New Transactions, Real World Examples
+Status: Migrated
+Title Approved: No
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Before continuing, make sure you have read the [New Transaction Overview & Setup](New%20Transaction%20Overview%20&%20Setup%207b6d9e5eb7bd4fc6b712c17a0e1e892b.md) lesson first.
+
+```jsx
+it("navigates to the new transaction form, selects a user and submits a transaction payment", function () {
+    const payment = {
+      amount: "35",
+      description: "Sushi dinner 🍣",
+    };
+
+    cy.getBySelLike("new-transaction").click();
+    cy.wait("@allUsers");
+
+    cy.getBySel("user-list-search-input").type(ctx.contact!.firstName, { force: true });
+    cy.wait("@usersSearch");
+    cy.visualSnapshot("User Search First Name Input");
+
+    cy.getBySelLike("user-list-item").contains(ctx.contact!.firstName).click({ force: true });
+    cy.visualSnapshot("User Search First Name List Item");
+
+    cy.getBySelLike("amount-input").type(payment.amount);
+    cy.getBySelLike("description-input").type(payment.description);
+    cy.visualSnapshot("Amount and Description Input");
+    cy.getBySelLike("submit-payment").click();
+    cy.wait(["@createTransaction", "@getUserProfile"]);
+    cy.getBySel("alert-bar-success")
+      .should("be.visible")
+      .and("have.text", "Transaction Submitted!");
+
+    const updatedAccountBalance = Dinero({
+      amount: ctx.user!.balance - parseInt(payment.amount) * 100,
+    }).toFormat();
+
+    if (isMobile()) {
+      cy.getBySel("sidenav-toggle").click();
+    }
+
+    cy.getBySelLike("user-balance").should("contain", updatedAccountBalance);
+    cy.visualSnapshot("Updated User Balance");
+
+    if (isMobile()) {
+      cy.get(".MuiBackdrop-root").click({ force: true });
+    }
+
+    cy.getBySelLike("create-another-transaction").click();
+    cy.getBySel("app-name-logo").find("a").click();
+    cy.getBySelLike("personal-tab").click().should("have.class", "Mui-selected");
+    cy.wait("@personalTransactions");
+
+    cy.getBySel("transaction-list").first().should("contain", payment.description);
+
+    cy.database("find", "users", { id: ctx.contact!.id })
+      .its("balance")
+      .should("equal", ctx.contact!.balance + parseInt(payment.amount) * 100);
+    cy.getBySel("alert-bar-success").should("not.exist");
+    cy.visualSnapshot("Personal List Validate Transaction in List");
+  });
+```
+
+You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+
+First, we create a simple `payment` object.
+
+```jsx
+const payment = {
+      amount: "35",
+      description: "Sushi dinner 🍣",
+    };
+```
+
+Next, we click on the "New" transaction button.
+
+```jsx
+cy.getBySelLike("new-transaction").click(); 
+```
+
+![Screen Shot 2021-09-14 at 3.56.39 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_3.56.39_PM.png)
+
+We then on our aliased intercept `@allUsers`. Remember, this happens in the `beforeEach()` hook before this test is run.
+
+```jsx
+cy.wait("@allUsers");
+```
+
+Then we search for a user and wait on the `@usersSearch` intercept.
+
+```jsx
+cy.getBySel("user-list-search-input").type(ctx.contact!.firstName, { force: true });
+    cy.wait("@usersSearch");
+```
+
+![Screen Shot 2021-09-14 at 4.01.10 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_4.01.10_PM.png)
+
+We then make an assertion that the user that we just searched for appears in the search results and then we click on that user to make a payment to them.
+
+```jsx
+cy.getBySelLike("user-list-item").contains(ctx.contact!.firstName).click({ force: true });
+```
+
+![Screen Shot 2021-09-14 at 4.02.44 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_4.02.44_PM.png)
+
+On the payment screen we enter the payment amount and description and submit the payment.
+
+```jsx
+cy.getBySelLike("amount-input").type(payment.amount);
+    cy.getBySelLike("description-input").type(payment.description);
+cy.getBySelLike("submit-payment").click();
+```
+
+![Screen Shot 2021-09-14 at 4.04.08 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_4.04.08_PM.png)
+
+We then wait upon two intercepts `@createTransaction` and `@getUserProfile` . Notice how you can wait upon multiple intercepts by putting them into an array. 
+
+Then we assert that the transaction was submitted successfully.
+
+```jsx
+cy.wait(["@createTransaction", "@getUserProfile"]);
+    cy.getBySel("alert-bar-success")
+      .should("be.visible")
+      .and("have.text", "Transaction Submitted!");
+```
+
+![Screen Shot 2021-09-14 at 4.07.10 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_4.07.10_PM.png)
+
+Next, we create a constant called `updatedAccountBalance`
+
+```jsx
+const updatedAccountBalance = Dinero({
+      amount: ctx.user!.balance - parseInt(payment.amount) * 100,
+    }).toFormat();
+```
+
+We are using a 3rd party library called [Dinero.js](https://dinerojs.com/) which handles currency formatting. Since Cypress is just JavaScript, we can import this library and use it within our test.
+
+Then we use our `isMobile()` utility function to determine if our test is being run in a mobile viewport. If so, we click on the button to toggle the sidebar.
+
+```jsx
+if (isMobile()) {
+      cy.getBySel("sidenav-toggle").click();
+    }
+```
+
+We then make an assertion that the user's account balance has been updated to the correct amount via the payment we just made.
+
+```jsx
+cy.getBySelLike("user-balance").should("contain", updatedAccountBalance);
+```
+
+Next, we click on the "Create another Transaction" button, then the app name logo in the header and write an assertion to make sure one of the tabs in the app has the correct class.
+
+```jsx
+cy.getBySelLike("create-another-transaction").click();
+    cy.getBySel("app-name-logo").find("a").click();
+    cy.getBySelLike("personal-tab").click().should("have.class", "Mui-selected");
+```
+
+![Screen Shot 2021-09-14 at 4.14.03 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_4.14.03_PM.png)
+
+Next, we wait upon the `@personalTransactions` intercept.
+
+```jsx
+cy.wait("@personalTransactions");
+```
+
+Then we write an assertion to ensure that the first transaction in the list contains the correct description from the transaction we just made.
+
+```jsx
+cy.getBySel("transaction-list").first().should("contain", payment.description);
+```
+
+![Screen Shot 2021-09-14 at 4.16.18 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_4.16.18_PM.png)
+
+We then use the custom Cypress command `cy.database()` to find the user we just made the payment to and assert that their balance in the database has been updated appropriately.
+
+```jsx
+cy.database("find", "users", { id: ctx.contact!.id })
+      .its("balance")
+      .should("equal", ctx.contact!.balance + parseInt(payment.amount) * 100);
+```
+
+![Screen Shot 2021-09-14 at 4.18.23 PM.png](Submitting%20a%20payment%20to%20another%20user%208361e707e0634632ad3883874b9be849/Screen_Shot_2021-09-14_at_4.18.23_PM.png)
+
+Finally, we assert that the alert bar does not exist in the `DOM`.
+
+```jsx
+cy.getBySel("alert-bar-success").should("not.exist");
+```
