--- a/content/real-world-examples/user-settings/user-setting-form-errors.mdx
+++ b/content/real-world-examples/user-settings/user-setting-form-errors.mdx
@@ -1,10 +1,98 @@
----
-title: User Setting Form Errors
----
 # User Setting Form Errors
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Diataxis Type: How-To Guide
+Ready for Review: Yes
+Section: Real World Examples, User Settings
+Status: Migrated
+Title Approved: No
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Before continuing, make sure you have read the [User Settings Overview & Setup](User%20Settings%20Overview%20&%20Setup%206d2553f98d2040abbcf6062055aa012c.md) lesson first.
+
+```bash
+it("should display user setting form errors", function () {
+  ["first", "last"].forEach((field) => {
+    cy.getBySelLike(`${field}Name-input`).type("Abc").clear().blur();
+    cy.get(`#user-settings-${field}Name-input-helper-text`)
+      .should("be.visible")
+      .and("contain", `Enter a ${field} name`);
+  });
+
+  cy.getBySelLike("email-input").type("abc").clear().blur();
+  cy.get("#user-settings-email-input-helper-text")
+    .should("be.visible")
+    .and("contain", "Enter an email address");
+
+  cy.getBySelLike("email-input").type("abc@bob.").blur();
+  cy.get("#user-settings-email-input-helper-text")
+    .should("be.visible")
+    .and("contain", "Must contain a valid email address");
+
+  cy.getBySelLike("phoneNumber-input").type("abc").clear().blur();
+  cy.get("#user-settings-phoneNumber-input-helper-text")
+    .should("be.visible")
+    .and("contain", "Enter a phone number");
+
+  cy.getBySelLike("phoneNumber-input").type("615-555-").blur();
+  cy.get("#user-settings-phoneNumber-input-helper-text")
+    .should("be.visible")
+    .and("contain", "Phone number is not valid");
+
+  cy.getBySelLike("submit").should("be.disabled");
+  cy.visualSnapshot("User Settings Form Errors and Submit Disabled");
+});
+```
+
+You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+
+## First & Last Name Inputs
+
+First, we are looping through an array of two strings to find the firstName and lastName inputs. Remember, [Cypress is just JavaScript](Cypress%20is%20Just%20JavaScript%20bc735379ff5146d7918c6927e735b5d8.md), so we can use `Array.forEach()` to simplify our code and remove duplication.
+
+```bash
+["first", "last"].forEach((field) => {
+    cy.getBySelLike(`${field}Name-input`).type("Abc").clear().blur();
+    cy.get(`#user-settings-${field}Name-input-helper-text`)
+      .should("be.visible")
+      .and("contain", `Enter a ${field} name`);
+  });
+```
+
+We then instruct Cypress to use `.type()` to enter "Abc" into each input, clear the input, and trigger the blur event on the input. We then assert that the validation error is triggered and contains the correct error message.
+
+![](/images/real-world-examples/user-settings/user-setting-form-errors/Screen_Shot_2021-06-29_at_1.29.56_PM.png)
+
+## Email & Phone inputs
+
+Let's finish our test by asserting that the email and phone inputs are also throwing the correct error messages. The code is virtually identical to the last name and first name code above. The only difference is the selector name.
+
+```js
+cy.getBySelLike("email-input").type("abc").clear().blur()
+cy.get("#user-settings-email-input-helper-text")
+  .should("be.visible")
+  .and("contain", "Enter an email address")
+
+cy.getBySelLike("email-input").type("abc@bob.").blur()
+cy.get("#user-settings-email-input-helper-text")
+  .should("be.visible")
+  .and("contain", "Must contain a valid email address")
+
+cy.getBySelLike("phoneNumber-input").type("abc").clear().blur()
+cy.get("#user-settings-phoneNumber-input-helper-text")
+  .should("be.visible")
+  .and("contain", "Enter a phone number")
+
+cy.getBySelLike("phoneNumber-input").type("615-555-").blur()
+cy.get("#user-settings-phoneNumber-input-helper-text")
+  .should("be.visible")
+  .and("contain", "Phone number is not valid")
+```
+
+We have two different assertions for both the email and phone number fields since these two fields can show different error messages depending upon the error.
+
+Finally, we will make sure that the submit button is disabled since there are errors with our form.
+
+```js
+cy.getBySelLike("submit").should("be.disabled")
+```
+
+![](/images/real-world-examples/user-settings/user-setting-form-errors/Screen_Shot_2021-06-29_at_1.37.46_PM.png)
